--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,3 +9,27 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v2.4.2
+
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v2.0.0
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker-build-push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/beerlog:latest
+
